completed angular app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,15 @@
 
 <!-- <app-listings-page></app-listings-page> -->
 
-<h1>Buy And Sell App!</h1>
-<router-outlet></router-outlet>
+<!-- <h1>Buy And Sell App!</h1> -->
+
+<div id="page-wrap">
+    <div id=max-width-column>
+        <app-nav-bar></app-nav-bar>
+
+        <div id="content-wrap">
+            <router-outlet></router-outlet>
+        </div>        
+    </div>
+</div>
+
