--- a/src/app/new-listing-page/new-listing-page.component.html
+++ b/src/app/new-listing-page/new-listing-page.component.html
@@ -2,7 +2,13 @@
 <div class="content-box">
     <h2>Create New Listing</h2>
 
-    <form (ngSubmit)="onSubmit()">
+    <app-listing-data-form
+        buttonText="Create Listing"
+        (onSubmit)="onSubmit()"
+    >
+    </app-listing-data-form>
+
+    <!-- <form (ngSubmit)="onSubmit()">
         <div>
             <label for="name">Name:</label>
             <input id="name" name="name" type="text" [(ngModel)]="name" />
@@ -19,5 +25,5 @@
         </div>
 
         <button type="submit">Create Listing</button>
-    </form>
+    </form> -->
 </div>
